--- a/css_friends/css/06-sidebar.css
+++ b/css_friends/css/06-sidebar.css
@@ -1,1 +1,34 @@
 /* PHASE 0: Sidebar */
+.profile-picture {
+    display: block;
+    margin-top: -100px;
+    border: 1px solid black;
+    background: black;
+    border-radius: 5px;
+    position: relative;
+}
+
+.profile-info {
+    margin: 20px 0;
+}
+
+.profile-info p {
+    margin: 20px 0;
+}
+
+.profile-info > h2 {
+    font-weight: 800;
+    font-size: 25px;
+}
+
+.profile-nav {
+    margin: 20px 0;
+}
+
+.profile-nav > li {
+    border-bottom: 1px solid lightgray;
+}
+
+.profile-nav > li:first-child {
+    border-bottom: 1px solid lightgray;
+}
